--- a/styles-roles.css
+++ b/styles-roles.css
@@ -211,3 +211,20 @@ input,
   height: 30px; /* Установите нужный размер */
   z-index: 2; /* Убедитесь, что иконка выше других элементов */
 }
+.killed-icon,
+.like-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 40px;
+  height: 40px;
+  border-radius: 30px;
+  z-index: 2;
+  background: none;
+}
+.like-icon {
+  right: 8px;
+}
+.people {
+  position: relative;
+}
